log
Wed 27 Mar 2024 02:20:52 PM UTC: 
 tests:  0|6
total_score: 0/70
8ebf868
Sun 31 Mar 2024 12:43:44 AM UTC: 
 list.c | 31 ++++++++++++++++++++++++++-----
 1 file changed, 26 insertions(+), 5 deletions(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:57:11: error: ‘vpoid’ undeclared (first use in this function); did you mean ‘void’?
   57 |   return (vpoid *)list->current->data;
      |           ^~~~~
      |           void
list.c:57:11: note: each undeclared identifier is reported only once for each function it appears in
list.c:57:18: error: expected expression before ‘)’ token
   57 |   return (vpoid *)list->current->data;
      |                  ^
list.c:59:1: error: control reaches end of non-void function [-Werror=return-type]
   59 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
70053e0
Sun 31 Mar 2024 12:44:06 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
6088ed8
Sun 31 Mar 2024 12:49:35 AM UTC: 
 list.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
 tests:  9|3
total_score: 35/70
b5be895
Sun 31 Mar 2024 12:50:32 AM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
5c8914c
Sun 31 Mar 2024 12:52:47 AM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:90:25: error: ‘List’ {aka ‘struct List’} has no member named ‘data’
   90 |     list->current = list->data;
      |                         ^~
Compilation failed
70d49f8
Sun 31 Mar 2024 12:53:53 AM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
fef90d5
